apps/immich/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
spec:
  selector:
    app: immich-postgres
  ports:
  - port: 5432
