apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-svc
spec:
  selector:
    app: immich-server
  ports:
  - name: http
    port: 80
    targetPort: 2283
