apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - drive-app
  rules:
  - host: "drive-app"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server-svc
            port:
              number: 80
